WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
237787
[Cocoa] MSE-backed videos fail to play in Captive Portal mode
https://bugs.webkit.org/show_bug.cgi?id=237787
Summary
[Cocoa] MSE-backed videos fail to play in Captive Portal mode
Jer Noble
Reported
2022-03-11 10:24:58 PST
[Cocoa] MSE-backed videos fail to play in Captive Portal mode
Attachments
Patch
(7.02 KB, patch)
2022-03-11 10:29 PST
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Patch for landing
(7.75 KB, patch)
2022-03-16 16:08 PDT
,
Jer Noble
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch for landing
(7.75 KB, patch)
2022-03-20 22:46 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Patch for landing
(7.74 KB, patch)
2022-03-23 11:28 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2022-03-11 10:25:49 PST
<
rdar://89318047
>
Jer Noble
Comment 2
2022-03-11 10:29:05 PST
Created
attachment 454496
[details]
Patch
Jer Noble
Comment 3
2022-03-16 16:08:47 PDT
Created
attachment 454907
[details]
Patch for landing
Peng Liu
Comment 4
2022-03-18 20:53:03 PDT
Comment on
attachment 454907
[details]
Patch for landing View in context:
https://bugs.webkit.org/attachment.cgi?id=454907&action=review
> Source/WebCore/ChangeLog:16 > + Instead, use the FourCharCode class to properly create a string from the codec ID.
Nit. Looks like you mean `FourCC` here?
Jer Noble
Comment 5
2022-03-20 22:46:49 PDT
Created
attachment 455217
[details]
Patch for landing
Jer Noble
Comment 6
2022-03-21 09:44:39 PDT
Comment on
attachment 455217
[details]
Patch for landing iOS-wk2 and api-mac tests are unrelated; cq+ing
EWS
Comment 7
2022-03-21 10:33:09 PDT
ChangeLog entry in LayoutTests/ChangeLog contains OOPS!.
Jer Noble
Comment 8
2022-03-23 11:28:13 PDT
Created
attachment 455529
[details]
Patch for landing
EWS
Comment 9
2022-03-23 13:02:17 PDT
Committed
r291762
(
248792@main
): <
https://commits.webkit.org/248792@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 455529
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug