[Cocoa] MSE-backed videos fail to play in Captive Portal mode https://bugs.webkit.org/show_bug.cgi?id=237787 <rdar://89318047>

Reviewed by Eric Carlson.

Source/WebCore:

Updated test: media/media-source/media-source-allowed-codecs.html

When generating the "codecs" string for a given MSE track, we were previously casting
the FourCC code (a uint32) to a string, and passing that across the GPU process boundary,
and reconstituting the string on the WebContent process side. This caused the codec entry
to be "reversed", (e.g., 'aac ' turned into ' caa'), and fail codec validation.

Instead, use the FourCharCode class to properly create a string from the codec ID.

* platform/graphics/avfoundation/objc/SourceBufferParserAVFObjC.mm:

LayoutTests:

* media/media-source/media-source-allowed-codecs-expected.txt:
* media/media-source/media-source-allowed-codecs.html:



Canonical link: https://commits.webkit.org/248792@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@291762 268f45cc-cd09-0410-ab3c-d52691b4dbfc